# Elaborato_Sistemi_Operativi

./: .gitignore  CMakeLists.txt  a.out  client  client.c  client1  client2  fifo.c  fifo.h  main  main.c  matrix.c  matrix.h  message_queue.c  message_queue.h  relazioneSistemiOperativi (1).odt  relazioneSistemiOperativi.odt  segnali.xlsx  semaphore.c  semaphore.h  server  server.c  shared_memory  shared_memory.c  shared_memory.h  tabella  utils.c  utils.h
